task-1-workload-hardening/policies/20-kyverno-signed-images-ghcr.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-ghcr-ledger-api-signatures
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  background: false
  rules:
    - name: verify-ghcr-image-keyless
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - ledger
      verifyImages:
        - imageReferences:
            - "ghcr.io/*/ledger-api*"
          mutateDigest: true
          required: true
          verifyDigest: true
          attestors:
            - entries:
                - keyless:
                    issuer: https://token.actions.githubusercontent.com
                    subjectRegExp: "https://github.com/.+/.github/workflows/ci-cd.yml@refs/heads/(main|master)"
                    rekor:
                      url: https://rekor.sigstore.dev
